--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,13 +1,8 @@
 server {
+    # Запрещаем выдавать версию nginx’а на страницах ошибок
+    server_tokens off;
     # Слушаем порт 80
     listen 80;
-
-    # Список IP, запросы к которым должен обрабатывать nginx
-    # В этом уроке проект разворачивается локально, поэтому nginx
-    # должен обрабатывать запросы к 127.0.0.1.
-    # Если вы планируете разворачивать контейнеры на удалённом сервере,
-    # здесь должен быть указан IP или доменное имя этого сервера
-    server_name 127.0.0.1;
 
     # Указываем директорию со статикой:
     # если запрос направлен к внутреннему адресу /static/ — 
