Add_rewie2_commit

--- a/.gitignore
+++ b/.gitignore
@@ -123,8 +123,8 @@ venv.bak/
 # mypy
 .mypy_cache/
 .dmypy.json
-dmypy.json
-dumpPostrgeSQL.json
+*.dumpPostrgeSQL.json
+*.fixtures.json
 
 # Pyre type checker
 .pyre/
